# auto_marl

./: .gitignore  README.md
project/: pyproject.toml
project/examples/core_usage/component_configuration/: configuration_to_json.ipynb
project/examples/hp_optimization/: generate_hp_opt_config.ipynb  load_and_run_hp_opt_config.ipynb
project/examples/hp_optimization/evaluation/: rl_hp_opt_evaluation_multiple.ipynb  rl_hp_opt_hyperparameter_study.ipynb
project/examples/multi_agent_rl/: deeper_look_into_marl_dqn.ipynb  simple_multi_agent_rl.ipynb
project/examples/reinforcement_learning/: deeper_look_into_marl_dqn.ipynb  deeper_look_into_rl_dqn.ipynb  deeper_look_into_rl_ppo.ipynb  simple_multi_agent_rl.ipynb  simple_rl.ipynb
project/src/automarl/: component.py  schema.py
project/src/automarl/cli/commands/: execute_component.py  load_run_component.py
project/src/automarl/components/basic_components/: artifact_management.py  component_group.py  dynamic_value.py  evaluator_component.py  evaluator_of_group.py  exec_component.py  loop_components.py  seeded_component.py  state_management.py  stateful_component_loder.py
project/src/automarl/components/fundamentals/: acessories.py
project/src/automarl/components/hp_opt/: hp_optimization_pipeline.py
project/src/automarl/core/: advanced_component_creation.py  advanced_input_management.py  advanced_input_utils.py
project/src/automarl/serialization/: configuration_component_utils.py  file_component_utils.py  json_component_utils.py  shape_json_utils.py
project/src/automarl/utils/: shapes_util.py  smart_enum.py
(+135 files in other folders)
